packages/nexa_http_native_macos/lib/src/native/nexa_http_native_ffi.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:nexa_http_native_macos/src/native/nexa_http_native_ffi.dart',
)
library;

import 'dart:ffi' as ffi;
import 'package:nexa_http_native_internal/src/native/nexa_http_native_types.dart'
    as imp$1;
import '' as self;

@ffi.Native<ffi.Uint64 Function(ffi.Pointer<NexaHttpClientConfigArgs>)>()
external int nexa_http_client_create(
  ffi.Pointer<NexaHttpClientConfigArgs> config_args,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> nexa_http_take_last_error_json();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void nexa_http_string_free(ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.UintPtr)>()
external ffi.Pointer<ffi.Uint8> nexa_http_request_body_alloc(int body_len);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>()
external void nexa_http_request_body_free(
  ffi.Pointer<ffi.Uint8> body_ptr,
  int body_len,
);

@ffi.Native<
  ffi.Uint8 Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<NexaHttpRequestArgs>,
    imp$1.NexaHttpExecuteCallback,
  )
>()
external int nexa_http_client_execute_async(
  int client_id,
  int request_id,
  ffi.Pointer<NexaHttpRequestArgs> request_args,
  imp$1.NexaHttpExecuteCallback callback,
);

@ffi.Native<ffi.Uint8 Function(ffi.Uint64, ffi.Uint64)>()
external int nexa_http_client_cancel_request(int client_id, int request_id);

@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void nexa_http_client_close(int client_id);

@ffi.Native<ffi.Void Function(ffi.Pointer<NexaHttpBinaryResult>)>()
external void nexa_http_binary_result_free(
  ffi.Pointer<NexaHttpBinaryResult> result,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>
  get nexa_http_string_free => ffi.Native.addressOf(self.nexa_http_string_free);
  ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NexaHttpBinaryResult>)>
  >
  get nexa_http_binary_result_free =>
      ffi.Native.addressOf(self.nexa_http_binary_result_free);
}

typedef NexaHttpHeaderEntry = imp$1.NexaHttpHeaderEntry;
typedef NexaHttpClientConfigArgs = imp$1.NexaHttpClientConfigArgs;
typedef NexaHttpRequestArgs = imp$1.NexaHttpRequestArgs;
typedef NexaHttpBinaryResult = imp$1.NexaHttpBinaryResult;
